<resources>
    <string name="app_name">Anagram</string>
    <string name="tv_score">Score:</string>
    <string name="tv_question">Que carro é esse?</string>
    <string name="ed_hint_text">Digite seu palpite</string>
    <string name="end_game">Fim de jogo</string>
    <string name="game_over_score_format">Final:\n%d ponto(s)</string>
    <string name="score_format">Pontuação: %d ponto(s)</string>
    <string name="new_game">Novo jogo</string>
</resources>